# chicoin

./: Cargo.toml  README.md  camelochain.opam  camelochain.opam.locked  chicoin.opam  dune-project
.github/workflows/: ci.yml  main.yml
lib/: b58.ml  b58.mli  block.ml  block.mli  chain.ml  chain.mli  dune  hash.ml  hash.mli  key.ml  key.mli  transaction.ml  transaction.mli
lib/test/: dune  test_b58.ml  test_block.ml  test_chain.ml  test_key.ml
lib_test/: dune  test_b58.ml  test_block.ml  test_chain.ml
src/: block.rs  chain.rs  key.rs  lib.rs  main.rs  p2p.rs  transaction.rs
src/key/: mod.rs
test/: dune
tests/: chain_test.rs
