[package]
name = "chicoin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bincode = "1.3.3"
secp256k1 = {version= "0.24.0", features=["global-context", "rand", "rand-std", "serde"]}
serde = {version="1.0.147", features=["derive"]}
sha2 = "0.10.6"
