(test
 (name test_block)
 (package camelochain)
 (modules test_block)
 (libraries alcotest camelochain))

(test
 (name test_chain)
 (package camelochain)
 (modules test_chain)
 (libraries alcotest camelochain))

(test
 (name test_b58)
 (package camelochain)
 (modules test_b58)
 (libraries alcotest camelochain qcheck-alcotest))

(test
 (name test_key)
 (package camelochain)
 (modules test_key)
 (libraries alcotest camelochain qcheck-alcotest))
