(test
 (name test_block)
 (package chicoin)
 (modules test_block)
 (libraries alcotest chicoin))

(test
 (name test_chain)
 (package chicoin)
 (modules test_chain)
 (libraries alcotest chicoin))

(test
 (name test_b58)
 (package chicoin)
 (modules test_b58)
 (libraries alcotest chicoin qcheck-alcotest))

(test
 (name test_key)
 (package chicoin)
 (modules test_key)
 (libraries alcotest chicoin qcheck-alcotest))
